# veritas

./: .editorconfig  .gitignore  .justfile  .pre-commit-config.yaml  .ruff.toml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  cliff.toml  pyproject.toml  pytest.ini  tox.ini
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md
.github/workflows/: ci.yml
src/veritas/: __init__.py  constants.py  exceptions.py  requirement.py  spec.py
tests/: test_requirement.py  test_spec.py
