[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "modist-library-template"
version = "0.1.0"
description = "Template library for the Modist project."
requires-python = ">=3.12"
authors = [{ name = "Stephen Bunn" }]
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["mod-industries", "modist", "library"]
classifiers = [
  "Development Status :: 1 - Planning",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.optional-dependencies]
dev = [
  "ruff",
  "tox",
  "pytest",
  "pytest-cov",
  "pytest-xdist",
  "hypothesis",
  "pre-commit",
  "mypy",
  "licensecheck",
  "git-cliff",
]

[project.urls]
Homepage = "https://github.com/mod-industries"
Repository = "https://github.com/mod-industries/modist-library-template"
Issues = "https://github.com/mod-industries/modist-library-template/issues"
Changelog = "https://github.com/mod-industries/modist-library-template/blob/main/CHANGELOG.md"

[tool.licensecheck]
using = "PEP631:dev"
