[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "veritas"
version = "0.1.0"
description = "Semver-based version specifications and requirement parsing."
requires-python = ">=3.12"
authors = [{ name = "Stephen Bunn" }]
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["mod-industries", "modist", "library"]
classifiers = [
  "Development Status :: 1 - Planning",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.optional-dependencies]
dev = [
  "ruff",
  "tox",
  "pytest",
  "pytest-cov",
  "pytest-xdist",
  "hypothesis",
  "pre-commit",
  "mypy",
  "licensecheck",
  "git-cliff",
]

[project.urls]
Homepage = "https://github.com/mod-industries"
Repository = "https://github.com/mod-industries/veritas"
Issues = "https://github.com/mod-industries/veritas/issues"
Changelog = "https://github.com/mod-industries/veritas/blob/main/CHANGELOG.md"

[tool.licensecheck]
using = "PEP631:dev"
